--- a/client/index.html
+++ b/client/index.html
@@ -13,11 +13,11 @@
 
     <h1 class="text-center">Negociações</h1>
 
-    <form class="form">
+    <form class="form" onsubmit="negociacaoController.add(event)">
 
         <div class="form-group">
             <label for="data">Data</label>
-            <input type="date" id="data" class="form-control" required autofocus/>
+            <input type="date" id="data" class="form-control" value="2003-07-15" required autofocus/>
         </div>
 
         <div class="form-group">
@@ -27,7 +27,7 @@
 
         <div class="form-group">
             <label for="valor">Valor</label>
-            <input id="valor" type="number" class="form-control" min="0.01" step="0.01" value="0.0" required />
+            <input id="valor" type="number" class="form-control" min="0.01" step="0.01" value="2.5" required />
         </div>
 
         <button class="btn btn-primary" type="submit">Incluir</button>
@@ -62,16 +62,10 @@
     </table>
 
     <script src="js/app/models/Negociacao.js"></script>
+    <script src="js/app/controllers/NegociacaoController.js"></script>
 
     <script>
-        let n1 = new Negociacao(new Date(), 5, 700);
-        console.log(n1.data);
-        n1.data.setDate(12);
-        console.log(n1.data);
-
-        //console.log(n1.quantidade);
-        //console.log(n1.valor);
-        //console.log(n1.volume);
+        let negociacaoController = new NegociacaoController();
     </script>
 </body>
 
