--- a/client/index.html
+++ b/client/index.html
@@ -61,6 +61,8 @@
         </tfoot>
     </table>
 
+
+    <script src="js/app/helpers/DateHelper.js"></script>
     <script src="js/app/models/Negociacao.js"></script>
     <script src="js/app/controllers/NegociacaoController.js"></script>
 
