--- a/client/index.html
+++ b/client/index.html
@@ -63,6 +63,7 @@
 
 
     <script src="js/app/helpers/DateHelper.js"></script>
+    <script src="js/app/models/Negociacoes.js"></script>
     <script src="js/app/models/Negociacao.js"></script>
     <script src="js/app/controllers/NegociacaoController.js"></script>
 
