--- a/client/index.html
+++ b/client/index.html
@@ -49,6 +49,7 @@
     <div id="negociacoesView"></div>
 
     <script src="js/app/helpers/DateHelper.js"></script>
+    <script src="js/app/helpers/Bind.js"></script>
     <script src="js/app/models/Negociacoes.js"></script>
     <script src="js/app/models/Negociacao.js"></script>
     <script src="js/app/models/Mensagem.js"></script>
@@ -56,6 +57,7 @@
     <script src="js/app/views/NegociacoesView.js"></script>
     <script src="js/app/views/MensagemView.js"></script>
     <script src="js/app/controllers/NegociacaoController.js"></script>
+    <script src="js/app/services/ProxyFactory.js"></script>
     <script>
         let negociacaoController = new NegociacaoController();
     </script>
